fix: overflow-x

--- a/css/all.css
+++ b/css/all.css
@@ -705,6 +705,12 @@ footer .add a {
   background-position: -267px 120vh;
 }
 
+@media (max-width: 767px) {
+  .bg-ball {
+    background-size: 204px;
+    background-position: -108px 210vh;
+  }
+}
 .programList {
   max-width: 909px;
   margin: 8px auto 0;
@@ -746,8 +752,10 @@ footer .add a {
     width: 93vw;
   }
   .programList .peopleChoose {
-    width: 100%;
-    overflow-x: auto;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+    overflow-x: scroll;
   }
   .programList .peopleChoose li {
     margin-right: 8px;
@@ -787,11 +795,15 @@ footer .add a {
   .feeList {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    margin-bottom: 60px;
   }
   .feeList > li {
     width: 100%;
     margin-right: 0;
     margin-bottom: 24px;
+  }
+  .feeList > li:last-child {
+    margin-bottom: 0;
   }
   .feeList .feeBody {
     padding: 24px 16px 0px 16px;
